# ps2rs

./: .gitignore  Cargo.toml  README.md
src/: bios.rs  bus.rs  cop0.rs  cpu.rs  error.rs  gpr.rs  instruction.rs  lib.rs  main.rs  utils.rs
src/instruction/: cop.rs  cop0.rs  mod.rs  special.rs
src/instructions/: cop0.rs  mod.rs  special.rs
